<resources>
    <string name="app_name">BooksApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username_hint">Username</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="signup_button_text">SIGN UP</string>
    <string name="login_switch_button_text">Already have an account? Login</string>
    <string name="login_button_text">LOG IN</string>
    <string name="switch_to_signup_text">Don\'t have an account? Sign Up</string>
</resources>